csproj에 ngrok-url.txt 포함 설정

--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -14,3 +14,8 @@
   </ItemGroup>
 
 </Project>
+<ItemGroup>
+  <Content Include="App_Data\ngrok-url.txt">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
